--- a/index.html
+++ b/index.html
@@ -12,35 +12,48 @@
       body {
         margin: 0;
         padding: 0;
-        overflow: hidden;;
+        overflow: hidden;
+      }
+
+      .calc {
+        width: 50%;
+        height: 50%;
+        margin: auto;
+        margin-top: 15%;
+        background-color: black;
       }
 
       #calcView {
         box-sizing: border-box;
-        width: 300px;
-        height: 50px;
+        font-size: 2em;
+        min-height: 100px;
         background-color: #039dfc;
         border: 2px solid rgba(2, 125, 201, 0.5);
       }
 
       #calcKeyGroups {
-        width: 300px;
-        height: 300px;
         display: flex;
         flex-direction: column;
       }
 
       #calcKeyGroup {
         width: 100%;
+        flex-basis: 25%;
       }
 
       .calcKey {
         box-sizing: border-box;
         border: 1px solid rgba(30, 110, 158, 0.5);
         width: 25%;
-        height: 50px;
+        height: 10vh;
+        min-height: 70px;
         background-color: #70c9ff;
         outline: none;
+        font-size: 25px;
+      }
+
+      #equal {
+        width: 50%;
       }
 
       .calcKey:active {
@@ -71,7 +84,7 @@
 
               <div id="calcKeyGroup">
                 <button name="C" onClick={e => props.onClick(e.target.name)} className="calcKey">C</button>
-                <button name="<" onClick={e => props.onClick(e.target.name)} className="calcKey">x</button>
+                <button name="<" onClick={e => props.onClick(e.target.name)} className="calcKey">{"<-"}</button>
                 <button name="+/-" onClick={e => props.onClick(e.target.name)} className="calcKey">+/-</button>
                 <button name="/" onClick={e => props.onClick(e.target.name)} className="calcKey">/</button>
               </div>
@@ -100,8 +113,8 @@
               <div id="calcKeyGroup">
                 <button name="0" onClick={e => props.onClick(e.target.name)} className="calcKey">0</button>
                 <button name="." onClick={e => props.onClick(e.target.name)} className="calcKey">.</button>
-                <button name="÷" onClick={e => props.onClick(e.target.name)} className="calcKey">÷</button>
-                <button name="=" onClick={e => props.onClick(e.target.name)} className="calcKey">=</button>
+                
+                <button name="=" onClick={e => props.onClick(e.target.name)} className="calcKey" id="equal">=</button>
               </div>
 
             </div>
@@ -161,7 +174,7 @@
 
         render(){
           return(
-            <div>
+            <div className="calc">
               <ResultComponent result={this.state.result} />
               <KeypadComponent onClick={this.onClick}/>
             </div>
