--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         border: 2px solid rgba(2, 125, 201, 0.5);
       }
 
+      
+
       #calcKeyGroups {
         display: flex;
         flex-direction: column;
@@ -50,10 +52,10 @@
         border: 1px solid rgba(30, 110, 158, 0.5);
         width: 25%;
         height: 10vh;
-        min-height: 70px;
+        min-height: 10vh;
         background-color: #edf3f7;
         outline: none;
-        font-size: 25px;
+        font-size: 2em;
       }
 
       #equal {
@@ -72,6 +74,40 @@
 
       .op {
         background-color: hsl(203, 92%, 75%);
+      }
+
+      @media only screen and (max-width:600px) {
+
+        .calc {
+          width: 80%;
+          height: 90%;
+          margin: auto;
+          margin-top: 15%;
+          background-color: #000;
+          box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        #calcView {
+          box-sizing: border-box;
+          font-size: 2em;
+          min-height: 20vh;
+          min-width: 80vw;
+          color: #FFF;
+          padding-left: 0px;
+          background-color: #002e72;
+          border: 2px solid rgba(2, 125, 201, 0.5);
+        }
+
+        .calcKey {
+          box-sizing: border-box;
+          border: 1px solid rgba(30, 110, 158, 0.5);
+          width: 25%;
+          height: 12vh;
+          min-height: 12vh;
+          background-color: #edf3f7;
+          outline: none;
+          font-size: 2em;
+        }
       }
     </style>
   </head>
