--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
       }
 
       .calc {
-        width: 50%;
-        height: 50%;
+        width: 80%;
+        height: 80%;
         margin: auto;
-        margin-top: 15%;
+        margin-top: 5%;
         background-color: #000;
         box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5);
       }
 
       #calcView {
         box-sizing: border-box;
-        font-size: 2em;
+        font-size: 3em;
+        height: 15vh;
         min-height: 120px;
         color: #FFF;
         padding-left: 20px;
@@ -51,11 +52,10 @@
         box-sizing: border-box;
         border: 1px solid rgba(30, 110, 158, 0.5);
         width: 25%;
-        height: 10vh;
-        min-height: 10vh;
+        height: 15vh;
         background-color: #edf3f7;
         outline: none;
-        font-size: 2em;
+        font-size: 3em;
       }
 
       #equal {
@@ -76,7 +76,7 @@
         background-color: hsl(203, 92%, 75%);
       }
 
-      @media only screen and (max-width:800px) {
+      /*@media only screen and (max-width:800px) {
 
         .calc {
           width: 80%;
@@ -107,7 +107,7 @@
           background-color: #edf3f7;
           outline: none;
           font-size: 2em;
-        }
+        }*/
       }
     </style>
   </head>
