--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
       }
 
       .calc {
-        width: 80%;
-        height: 80%;
+        width: 25em;
+        /*height: 80%;*/
+        display: flex;
+        flex-direction: column;
+
         margin: auto;
         margin-top: 5%;
+
         background-color: #000;
         box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5);
       }
@@ -28,34 +32,40 @@
       #calcView {
         box-sizing: border-box;
         font-size: 3em;
-        height: 15vh;
-        min-height: 120px;
+        text-align: right;
+        max-height: 100px;
+        height: 100px;
+
         color: #FFF;
-        padding-left: 20px;
-        background-color: #002e72;
+
+        background-color: #0066e3;
         border: 2px solid rgba(2, 125, 201, 0.5);
       }
 
-      
+
 
       #calcKeyGroups {
-        display: flex;
-        flex-direction: column;
+
+
       }
 
       #calcKeyGroup {
-        width: 100%;
-        flex-basis: 25%;
+
       }
 
       .calcKey {
         box-sizing: border-box;
         border: 1px solid rgba(30, 110, 158, 0.5);
         width: 25%;
-        height: 15vh;
+        padding: 15px;
         background-color: #edf3f7;
         outline: none;
         font-size: 3em;
+      }
+
+      #clear {
+        width: 50%;
+        background-color: #CCC;
       }
 
       #equal {
@@ -77,7 +87,6 @@
       }
 
       /*@media only screen and (max-width:800px) {
-
         .calc {
           width: 80%;
           height: 90%;
@@ -86,7 +95,6 @@
           background-color: #000;
           box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5);
         }
-
         #calcView {
           box-sizing: border-box;
           font-size: 2em;
@@ -97,7 +105,6 @@
           background-color: #002e72;
           border: 2px solid rgba(2, 125, 201, 0.5);
         }
-
         .calcKey {
           box-sizing: border-box;
           border: 1px solid rgba(30, 110, 158, 0.5);
@@ -133,9 +140,8 @@
             <div id="calcKeyGroups">
 
               <div id="calcKeyGroup">
-                <button name="C" onClick={e => props.onClick(e.target.name)} className="calcKey">C</button>
+                <button name="C" onClick={e => props.onClick(e.target.name)} className="calcKey" id="clear">C</button>
                 <button name="<" onClick={e => props.onClick(e.target.name)} className="calcKey">{"<-"}</button>
-                <button name="+/-" onClick={e => props.onClick(e.target.name)} className="calcKey op">+/-</button>
                 <button name="/" onClick={e => props.onClick(e.target.name)} className="calcKey op">/</button>
               </div>
 
@@ -163,7 +169,7 @@
               <div id="calcKeyGroup">
                 <button name="0" onClick={e => props.onClick(e.target.name)} className="calcKey">0</button>
                 <button name="." onClick={e => props.onClick(e.target.name)} className="calcKey">.</button>
-                
+
                 <button name="=" onClick={e => props.onClick(e.target.name)} className="calcKey" id="equal">=</button>
               </div>
 
