--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       }
 
       .calc {
-        width: 25em;
-        /*height: 80%;*/
+        width: 30em;
         display: flex;
         flex-direction: column;
 
@@ -42,22 +41,11 @@
         border: 2px solid rgba(2, 125, 201, 0.5);
       }
 
-
-
-      #calcKeyGroups {
-
-
-      }
-
-      #calcKeyGroup {
-
-      }
-
       .calcKey {
         box-sizing: border-box;
         border: 1px solid rgba(30, 110, 158, 0.5);
         width: 25%;
-        padding: 15px;
+        padding: 20px;
         background-color: #edf3f7;
         outline: none;
         font-size: 3em;
@@ -86,35 +74,15 @@
         background-color: hsl(203, 92%, 75%);
       }
 
-      /*@media only screen and (max-width:800px) {
+      @media only screen and (max-width:800px) {
         .calc {
-          width: 80%;
-          height: 90%;
-          margin: auto;
-          margin-top: 15%;
-          background-color: #000;
-          box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5);
+          width: 35em;
         }
-        #calcView {
-          box-sizing: border-box;
-          font-size: 2em;
-          min-height: 20vh;
-          min-width: 80vw;
-          color: #FFF;
-          padding-left: 0px;
-          background-color: #002e72;
-          border: 2px solid rgba(2, 125, 201, 0.5);
-        }
+
         .calcKey {
-          box-sizing: border-box;
-          border: 1px solid rgba(30, 110, 158, 0.5);
-          width: 25%;
-          height: 12vh;
-          min-height: 12vh;
-          background-color: #edf3f7;
-          outline: none;
-          font-size: 2em;
-        }*/
+          padding: 35px;
+        }
+
       }
     </style>
   </head>
