--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         background-color: hsl(203, 92%, 75%);
       }
 
-      @media only screen and (max-width:800px) {
+      @media (max-width:768px) {
         .calc {
           width: 35em;
         }
