--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       @media (max-width:768px) {
         .calc {
-          width: 35em;
+          width: 80%;
         }
 
         .calcKey {
