--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       body {
         margin: 0;
         padding: 0;
+        width: 100vw;
+        height: 100vh;
         overflow: hidden;
         background-color: #039dfc;
       }
@@ -52,12 +54,7 @@
         font-size: 3em;
       }
 
-      #clear {
-        width: 50%;
-        background-color: #CCC;
-      }
-
-      #equal {
+      #clear, #equal {
         width: 50%;
         background-color: #CCC;
       }
@@ -75,7 +72,7 @@
         background-color: hsl(203, 92%, 75%);
       }
 
-      @media (max-width:768px) {
+      /*@media (max-width:768px) {
         .calc {
           width: 80%;
         }
@@ -84,7 +81,7 @@
           padding: 35px;
         }
 
-      }
+      }*/
     </style>
   </head>
   <body>
