--- a/index.html
+++ b/index.html
@@ -72,16 +72,12 @@
         background-color: hsl(203, 92%, 75%);
       }
 
-      /*@media (max-width:768px) {
+      @media (max-width:768px) {
         .calc {
-          width: 80%;
+          width: 25em;
         }
 
-        .calcKey {
-          padding: 35px;
-        }
-
-      }*/
+      }
     </style>
   </head>
   <body>
