--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         .calc {
           width: 25em;
           margin-top: 15%;
+          box-shadow: 6px 6px 6px rgba(0, 0, 0, 0);
         }
 
       }
